--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <span>My Application</span>
 </mat-toolbar>
 
-<form [formGroup]="form">
+<!--<form [formGroup]="form">
   <div class="grid-container">
     <mat-form-field appearance="outline">
       <mat-label>Name</mat-label>
@@ -17,6 +17,6 @@
  matInput placeholder="Your email"  formControlName="email">
     </mat-form-field>
 </div>
-</form>
+</form>-->
 
 <app-thoughts [canShare]="canShare" (onThought)="share($event)"></app-thoughts>
